--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ pydantic~=1.10.2
 requests~=2.27.1
 pymongo~=3.12.0
 python-rapidjson~=1.5
-ray~=1.12.0
-pytest~=7.1.3
-setuptools~=62.0.0
-blend_modes~=2.1.0
 protobuf==3.20.0
+ray[default]~=2.39.0
+memray
+tqdm
+pytest~=7.1.3
+jupyter
 ipython-sql
+setuptools~=62.0.0
+wheel
+twine
