--- a/requirements-universal.txt
+++ b/requirements-universal.txt
@@ -12,6 +12,8 @@ aiosignal==1.3.1
     # via
     #   aiohttp
     #   ray
+annotated-types==0.7.0
+    # via pydantic
 anyio==4.6.2.post1
     # via jupyter-server
 appnope==0.1.4 ; platform_system == 'Darwin'
@@ -309,8 +311,6 @@ parso==0.8.4
     # via jedi
 pexpect==4.9.0 ; sys_platform != 'win32'
     # via ipython
-pillow==9.1.1
-    # via -r requirements.txt
 pkginfo==1.10.0
     # via twine
 platformdirs==4.3.6
@@ -337,7 +337,6 @@ propcache==0.2.0
     #   yarl
 protobuf==3.20.0
     # via
-    #   -r requirements.txt
     #   google-api-core
     #   googleapis-common-protos
     #   ray
@@ -361,10 +360,12 @@ pyasn1-modules==0.4.1
     # via google-auth
 pycparser==2.22
     # via cffi
-pydantic==1.10.19
+pydantic==2.9.2
     # via
     #   -r requirements.txt
     #   ray
+pydantic-core==2.23.4
+    # via pydantic
 pygments==2.18.0
     # via
     #   ipython
@@ -372,8 +373,6 @@ pygments==2.18.0
     #   nbconvert
     #   readme-renderer
     #   rich
-pymongo==3.12.3
-    # via -r requirements.txt
 pytest==7.1.3
     # via -r requirements.txt
 python-dateutil==2.9.0.post0
@@ -415,7 +414,6 @@ referencing==0.35.1
     #   jupyter-events
 requests==2.27.1
     # via
-    #   -r requirements.txt
     #   google-api-core
     #   jupyterlab-server
     #   ray
@@ -520,6 +518,7 @@ typing-extensions==4.12.2
     #   ipython
     #   multidict
     #   pydantic
+    #   pydantic-core
     #   rich
     #   sqlalchemy
     #   textual
